--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -2,6 +2,53 @@
     font-family: 'Roboto', sans-serif;
 }
 
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #4379A7;
+    width: 100%;
+    display: inline-block;
+    /* border-bottom:2px solid dimgrey; */
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    /*padding: 14px 16px;*/
+    transition: 0.3s;
+    font-size: 17px;
+    width: 15%;
+    color: white;
+    height: 2em;
+    margin-left: 1%;
+    margin-top: 0.5em;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+    color: #000;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ffffff6b;
+    color: black;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    /*padding: 6px 12px;*/
+    /*border: 1px solid #ccc;*/
+    /*border-top: none;*/
+}
+
 
 /*Element Styling*/
 
@@ -160,6 +207,11 @@ path.hidden {
     padding: 5px;
     display: inline-block;
     float: left;
+}
+
+.fullView{
+    display: inline-block;
+    width: 100%;
 }
 
 .innerWrapper {
