--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -15,6 +15,11 @@ h2 {
     margin-bottom:1em;
 }
 
+.chart {
+            margin: 10px;
+            padding-top: 10px;
+        }
+
 #slider-container {
     position: relative;
     height:30px;
@@ -491,3 +496,4 @@ i.europe {
     font-size: 80px;
     opacity: .4;
 }
+
