--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -2,6 +2,80 @@
     font-family: 'Roboto', sans-serif;
 }
 
+#dropdown {
+    text-align: center;
+    font-size: 20px;
+}
+
+.button {
+    border-radius: 20px;
+    cursor: pointer;
+    display: inline-block;
+    text-align: center;
+    position: relative;
+    height: 60px;
+    width: 210px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 17px;
+    background-color: #0b0b7e9c;
+    color: white;
+    font-weight: bolder;
+    margin-left: 0.5em;
+}
+
+#driver-details{
+    /*background-color: #10da8f1a;*/
+    width: 100%;
+}
+#driver-select{
+    /*background-color: #c7e9c0d6;*/
+    width: 100%;
+    margin-top: -1%;
+}
+
+#driver-names{
+    width: 100%;
+    height: 250px;
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 1%;
+    display: none;
+    /*background-color: #10da8f4d;*/
+}
+
+#driver-names li{
+    width: 20%;
+    cursor: pointer;
+}
+
+.driver-title{
+    font-family: Lato;
+    font-size: 20px;
+    font-weight: bold;
+}
+.driver-text{
+    font-family: Lato;
+    font-size: 15px;
+}
+
+#selected-drivers{
+    display: inline-block;
+    float: right;
+    margin-top: -25%;
+    margin-right: 10%;
+}
+#selected-drivers li{
+    width: 150%;
+    cursor: pointer;
+    margin-top: 1%;
+    font-size: 13px;
+}
+
+.driverName{
+    text-anchor: middle;
+}
+
 h1, h2 {
     text-align: center;
     margin:0.8em;
