--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -57,8 +57,16 @@
 
 #dropdown {
     text-align: center;
-    font-size: 20px;
+    font-size: 17px;
 }
+
+#playerdropdown {
+    text-align: center;
+    font-size: 17px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
 
 .button {
    border-radius: 20px;
