--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -2,6 +2,12 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.selected{
+    stroke: #404040;;
+    stroke-width:4;
+}
+
+
 #table { 
         width: 100%; 
         padding: 120px;
