--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -219,6 +219,7 @@ h2 {
     height:30px;
     background-color: #eeeef5;
     margin-left: 1%;
+    margin-right: 6.3%;
     margin-top: 0.5em;
 }
 
@@ -428,7 +429,6 @@ h2 {
     opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
-    margin-left: 20px
 }
 
 .slider::-webkit-slider-thumb {
