--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -342,9 +342,9 @@ h2 {
     margin-top: 50px;
     width : 100%;
 }
-#demo-video{
+/*#demo-video{
     width : 1000px;
-}
+}*/
 /*Element Styling*/
 /*ID Styling*/
 
